fix: Ensure Publications and preprints font size is applied on mobile
- Achieve Page:
    - Added  to  font-size in mobile media query to ensure proper application.

--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ footer {
 
 #publications-title {
     white-space: nowrap;
-    font-size: 1.5em;
+    font-size: 1.5em !important;
 }
 
     #email-contact {
